@@ -3,6 +3,8 @@ Revision history for Perl extension At.pm
 {{$NEXT}}
 
     - Login failures are fatal errors
+    - Update according to lexicon changes in bluesky-social/atproto@15f3856
+       - communication templates for moderation
 
 0.06 2024-01-19T02:20:52Z
 
